--- a/Modulo03_DesarrolloDeAplicacionesConJSF/AnthonyHurtado/Proyectos/E_Bank/web/resources/templates/master.xhtml
+++ b/Modulo03_DesarrolloDeAplicacionesConJSF/AnthonyHurtado/Proyectos/E_Bank/web/resources/templates/master.xhtml
@@ -5,34 +5,58 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <h:head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <h:outputStylesheet name="css/default.css"/>
-        <h:outputStylesheet name="css/cssLayout.css"/>
-        <title>Bienvenido al Banco de Venezuela</title>
+        <h:outputStylesheet name="css/bootstrap.min.css"/>
+        <title>
+            <ui:insert name="title">
+                Bienvenido/a al Banco del Mundo
+            </ui:insert>
+        </title>
     </h:head>
     <h:body>
-        <div id="top">
-            <ui:insert name="top">
-                <h1>Bienvenidos al Banco de Venezuela</h1>
-                <h:form>
-                    <ul>
-                        <li><h:commandLink value="Inicio" action="home" /></li>
-                        <li><h:commandLink value="Acerca" action="about" /></li>
-                        <li><h:commandLink value="Servicios" action="service" /></li>
-                        <li><h:commandLink value="Contacto" action="contact" /></li>
-                        <li><h:commandLink value="Iniciar Sesión" action="login" /></li>
-                    </ul>
-                </h:form>
-            </ui:insert>
-        </div>
+        <article class="container">
+            <section id="top">
+                <ui:insert name="top">
+                    <h:form>
+                        <nav class="navbar navbar-inverse">
+                            <div class="container-fluid">
+                                <!-- Brand and toggle get grouped for better mobile display -->
+                                <div class="navbar-header">
+                                  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                                    <span class="sr-only">Toggle navigation</span>
+                                    <span class="icon-bar"></span>
+                                    <span class="icon-bar"></span>
+                                    <span class="icon-bar"></span>
+                                  </button>
+                                  <h:commandLink class="navbar-brand" value="Banco del Mundo" action="home" />
+                                </div>
 
-        <div id="content" class="center_content">
-            <ui:insert name="content">Content</ui:insert>
-        </div>
+                                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                                  <ul class="nav navbar-nav">
+                                    <li><h:commandLink value="Acerca" action="about" /></li>
+                                    <li><h:commandLink value="Servicios" action="service" /></li>
+                                    <li><h:commandLink value="Contacto" action="contact" /></li>
+                                    <li><h:commandLink value="Iniciar Sesión" action="login" /></li>
+                                  </ul>
+                                </div>
+                            </div>
+                        </nav>
+                    </h:form>
+                </ui:insert>
+            </section>
 
-        <div id="bottom">
-            <ui:insert name="bottom">
-                Todos los derechos reservados. Creado por Anthony Hurtado.
-            </ui:insert>
-        </div>
+            <section id="content" class="center_content">
+                <ui:insert name="content">
+                    Contenido
+                </ui:insert>
+            </section>
+
+            <section id="bottom">
+                <ui:insert name="bottom">
+                    <p class="text-center text-muted">
+                        Todos los derechos reservados. Creado por Anthony Hurtado.
+                    </p>
+                </ui:insert>
+            </section>
+        </article>
     </h:body>
 </html>
