--- a/Modulo03_DesarrolloDeAplicacionesConJSF/AnthonyHurtado/Proyectos/E_Bank/web/views/public/contact.xhtml
+++ b/Modulo03_DesarrolloDeAplicacionesConJSF/AnthonyHurtado/Proyectos/E_Bank/web/views/public/contact.xhtml
@@ -4,8 +4,23 @@
     xmlns="http://www.w3.org/1999/xhtml"
     xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
     template="./../../resources/templates/master.xhtml">
+    
+    <ui:define name="title">
+        Contacto
+    </ui:define>
 
     <ui:define name="content">
-        <h1>Contacto</h1>
+        <h3 class="text-info">Contacto</h3>
+        <hr />
+        <p class="text-justify text-muted">
+            Estado: Distrito Capital<br/>
+            Ciudad: Caracas<br/>
+            Municipio: Libertador<br/>
+            Punto de Atención: Los Caobos (0366)<br/>
+            Dirección: Av. Este 2, Edificio Administrativo Unión, Los Caobos, Municipio Libertador, Distrito Capital<br/>
+            Fecha de Cierre: Lunes 30 de octubre de 2017<br/>
+            Los Clientes serán atendidos en: La Candelaria (0044), Calle Este 2, Esquina Peligro, Resd. Doral Plaza, La Candelaria, Municipio Libertador, Distrito Capital<br/>
+            Horario de atención: 8:30 a.m. hasta 3:30 p.m.
+        </p>        
     </ui:define>
 </ui:composition>
