--- a/Modulo03_DesarrolloDeAplicacionesConJSF/AnthonyHurtado/Proyectos/E_Bank/web/views/online/dashboard.xhtml
+++ b/Modulo03_DesarrolloDeAplicacionesConJSF/AnthonyHurtado/Proyectos/E_Bank/web/views/online/dashboard.xhtml
@@ -1,13 +1,21 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                template="./../../resources/templates/master.xhtml">
+                template="./../../resources/templates/master.xhtml"
+                xmlns:h="http://xmlns.jcp.org/jsf/html">
 
     <ui:define name="title">
         Dashboard
     </ui:define>
 
     <ui:define name="content">
-        ¡Hola!
+        <h:panelGrid columns="2">
+            <h:outputLabel value="Usuario:" />
+            #{ request.getSession(false).getAttribute("username") }
+            
+            <h:form>
+                <h:commandButton value="Cerrar sesión" action="#{ loginBean.logout }" />
+            </h:form>
+        </h:panelGrid>
     </ui:define>
 </ui:composition>
