--- a/Modulo03_DesarrolloDeAplicacionesConJSF/ErnestoMurrugarra/Proyectos/EBank/web/views/authentication.xhtml
+++ b/Modulo03_DesarrolloDeAplicacionesConJSF/ErnestoMurrugarra/Proyectos/EBank/web/views/authentication.xhtml
@@ -5,6 +5,7 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
         <title>Igreso a la banca en línea</title>
+        <h:outputStylesheet name="css/w3.css"/>
     </h:head>
     <h:body>
         <h2>Por favor, suministre sus datos...</h2>
@@ -22,7 +23,7 @@
                 <h:commandButton value="Entrar" action="dashboard" />
             </h:panelGrid>
         </h:form>
-        <h:form><h:commandButton value="Salir" action="index" /></h:form>
+        <h:form><h:commandButton value="Salir" action="views/principal" /></h:form>
     </h:body>
 </html>
 
