--- a/Modulo03_DesarrolloDeAplicacionesConJSF/ErnestoMurrugarra/Proyectos/EBank/web/views/person_data.xhtml
+++ b/Modulo03_DesarrolloDeAplicacionesConJSF/ErnestoMurrugarra/Proyectos/EBank/web/views/person_data.xhtml
@@ -31,8 +31,13 @@
                             <f:validateRequired />
                         </h:selectOneMenu>
 
-                        <h:outputLabel value="Salario: " />
-                        <h:inputText value="" label="Salario">
+                        <h:outputLabel value="Dirección residencia: " />
+                        <h:inputText value="" label="Dirección residencia">
+                            <f:validateRequired />
+                        </h:inputText>
+                        
+                        <h:outputLabel value="Correo: " />
+                        <h:inputText value="" label="Correo">
                             <f:validateRequired />
                         </h:inputText>
 
